chore: configuração básica de SEO

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"
         integrity="sha512-hIlMpy2enepx9maXZF1gn0hsvPLerXoLHdb095CmRY5HG3bZfN7XPBZ14g+TUDH1aGgfLyPHmY9/zuU53smuMw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <meta name="description" content="Lucas Borges - Desenvolvedor Full-Stack e entusiasta de software livre. Conheça meus projetos, habilidades e experiência profissional.">
+    <meta name="keywords" content="Lucas Borges, desenvolvedor, Full-Stack, software livre, projetos, habilidades, experiência profissional">
+    <meta name="author" content="Lucas Borges">
     <title>terminal@45.132.157.2</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
