--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         integrity="sha512-hIlMpy2enepx9maXZF1gn0hsvPLerXoLHdb095CmRY5HG3bZfN7XPBZ14g+TUDH1aGgfLyPHmY9/zuU53smuMw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <meta name="description" content="Lucas Borges - Desenvolvedor Full-Stack e entusiasta de software livre. Conheça meus projetos, habilidades e experiência profissional.">
-    <meta name="keywords" content="Lucas Borges, desenvolvedor, Full-Stack, software livre, projetos, habilidades, experiência profissional">
+    <meta name="description" content="Lucas Borges - Desenvolvedor Fullstack e entusiasta de software livre. Conheça meus projetos, habilidades e experiência profissional.">
+    <meta name="keywords" content="Lucas Borges, desenvolvedor, Full-Stack,Fullstack, software livre, projetos, habilidades, experiência profissional, estágio, back-end, backend">
     <meta name="author" content="Lucas Borges">
     <title>terminal@45.132.157.2</title>
     <link rel="stylesheet" href="css/reset.css">
